<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MindEscape</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="choisissez_le_niveau">Choisissez le niveau</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="niveau_1">Niveau 1</string>
    <string name="niveau_2">Niveau 2</string>
    <string name="niveau_3">Niveau 3</string>
    <string name="votre_score">Votre Score</string>
    <string name="temps">Temps</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="jouer_encore">Jouer Encore</string>
    <string name="nouveau_record">NOUVEAU RECORD</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="niveau">Niveau</string>
    <string name="deplacements">Deplacements</string>
    <string name="menu">Menu</string>

</resources>
