<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tp_temp.GameOverActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2.14"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:scaleType="center" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.04"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.03"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/votre_score"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Level 0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/txtPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/txtTemps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temps"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtTempsJoueur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/txtRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nouveau_record"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnEnr"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enregistrer" />

            <Button
                android:id="@+id/btnRec"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/jouer_encore" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
